fix: email text overflow

--- a/src/app/main/contacts/contact-list-item/contact-list-item.component.scss
+++ b/src/app/main/contacts/contact-list-item/contact-list-item.component.scss
@@ -8,6 +8,7 @@
     app-email {
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
